insert map, fix mobile layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,12 @@ body {
     background-color: lightblue;
     font-size: 2em;
 }
+
+
+
+/* map */
+
+#map {
+    background-color: lightgrey;
+    height: 100%;
+}
